--- a/style.css
+++ b/style.css
@@ -1,23 +1,89 @@
-*{
-    margin: 0%;
-    padding: 0%;
+*{margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: "montserrat",sans-serif;
-    font-optical-sizing: auto;
+    font-family: "Montserrat", sans-serif;
+   
     font-weight: 500;
     font-style: normal;
-}
-.header {
+ }
+ .header {
     display: flex;
     justify-content: space-between;
-    padding: 15px;
-}
-.header>img {
-    width: 200px;
-}
-.link{
+    padding: 20px;
+ }
+ .link {
     font-size: 30px;
     color: black;
     text-decoration: none;
-    tr
-}
+    transition: font-size 1s ;
+ 
+ }
+ .linkgrp {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    justify-content: space-between;
+    margin-right: 10px;
+ }
+ .link:hover {
+    font-size: 50px;
+    color: orange;
+ }
+ .intro{
+     display: grid;
+     grid-template-columns: 50% 50%;
+     padding: 20px;
+     margin-top: 40px;
+ }
+ .intro>img{
+     height: 450px;
+     margin: 8px auto 8px auto;
+ }
+ .introcnt>h1{
+     color: black;
+     font-size: 60px;
+ }
+ .introcnt>div{
+     margin-top: 10px;
+     text-align: justify;
+ }
+ .introcnt>a{
+     display: inline-block;
+     margin-top: 20px;
+     text-decoration: none;
+ 
+     background-color: rgb(58, 58, 222);
+     color: white;
+     padding: 20px;
+     border-radius: 5px;
+     transition: background-color 400ms;
+ 
+ }
+ .introcnt>a:hover{
+     background-color:rgb(58, 58, 222) ;
+ }
+ .about{
+     margin-top: 20px;
+     padding: 20px;
+     display: grid;
+     grid-template-columns: 50% 50%;
+ 
+ }
+ .aboutcnt>div{
+     margin-top: 50px;
+ 
+ }
+ .aboutcnt>h3{
+     color: blue;
+     font-weight: bolder;
+ }
+ .aboutcnt>p{
+     margin-top: 20px;
+     text-align: justify;
+ }
+ html{
+     scroll-behavior: smooth;
+ }
+ ::-webkit-scrollbar{
+     display: none;
+ }
